Fix: remove service accounts for users all interface